updated projects layouts

--- a/index.html
+++ b/index.html
@@ -143,76 +143,146 @@
           <h2 class="section-title reveal-on-scroll">Work</h2>
 
           <div class="projects-grid">
-            <article class="project-card reveal-on-scroll">
-              <h3>Nayaya AI</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/nayaya-ai</p>
-              <a href="https://github.com/meghaboi/nayaya-ai" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+            <article class="project-card project-card-featured reveal-on-scroll">
+              <p class="project-index">01</p>
+              <div class="project-head">
+                <h3>Nayaya AI</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">TypeScript &middot; React &middot; Gemini</p>
+              <p class="project-copy">
+                AI platform built for lawyers and law firms. Handles legal research, document analysis, and case prep
+                like a junior associate that never sleeps.
+              </p>
+              <a href="https://github.com/meghaboi/nayaya-ai" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
+            </article>
+
+            <article class="project-card project-card-featured reveal-on-scroll">
+              <p class="project-index">02</p>
+              <div class="project-head">
+                <h3>MUNEIGO</h3>
+                <span class="project-status">Production-Ready</span>
+              </div>
+              <p class="project-tag">TypeScript &middot; Node.js &middot; PostgreSQL &middot; Docker</p>
+              <p class="project-copy">
+                Full-stack AI tool for Model UN delegates with research dossiers, speech writing, counterarguments,
+                admin dashboard, JWT auth, and Docker deployment.
+              </p>
+              <a href="https://github.com/meghaboi/MUNEIGO" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>MUNEIGO</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/MUNEIGO</p>
-              <a href="https://github.com/meghaboi/MUNEIGO" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">03</p>
+              <div class="project-head">
+                <h3>Telugu Social</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">Next.js &middot; Supabase &middot; TypeScript</p>
+              <p class="project-copy">
+                Community platform for Telugu Gen Z with phone OTP auth, city-based profiles, posts, reactions,
+                moderation queue, and forum workflows.
+              </p>
+              <a href="https://github.com/meghaboi/telugu-social" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>Telugu Social</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/telugu-social</p>
-              <a href="https://github.com/meghaboi/telugu-social" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">04</p>
+              <div class="project-head">
+                <h3>MinuteTrails</h3>
+                <span class="project-status">Mobile Build</span>
+              </div>
+              <p class="project-tag">JavaScript &middot; CSS &middot; Capacitor (Android)</p>
+              <p class="project-copy">
+                Mobile-first app with Android build support via Capacitor. Structured as a trail/tracking style product
+                with native packaging.
+              </p>
+              <a href="https://github.com/meghaboi/MinuteTrails" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>MinuteTrails</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/MinuteTrails</p>
-              <a href="https://github.com/meghaboi/MinuteTrails" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">05</p>
+              <div class="project-head">
+                <h3>Dialectus AI</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">TypeScript &middot; HTML &middot; CSS</p>
+              <p class="project-copy">
+                AI debate tool focused on structured arguments, rebuttal practice, and critical-thinking workflows for
+                high-pressure discussions.
+              </p>
+              <a href="https://github.com/meghaboi/dialectus-ai" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>Dialectus AI</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/dialectus-ai</p>
-              <a href="https://github.com/meghaboi/dialectus-ai" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">06</p>
+              <div class="project-head">
+                <h3>Saturn Prep</h3>
+                <span class="project-status">In Progress</span>
+              </div>
+              <p class="project-tag">Stack details releasing soon</p>
+              <p class="project-copy">
+                SAT prep project slot in active development. Public technical details are being prepared and will be
+                added as the repo matures.
+              </p>
+              <a href="https://github.com/meghaboi/saturn-prep" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>Saturn Prep</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/saturn-prep</p>
-              <a href="https://github.com/meghaboi/saturn-prep" target="_blank" rel="noreferrer">GitHub &rarr;</a>
-            </article>
-
-            <article class="project-card reveal-on-scroll">
-              <h3>Modular RAG App v2</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/modular_rag_app_v2</p>
+              <p class="project-index">07</p>
+              <div class="project-head">
+                <h3>Modular RAG App v2</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">Python &middot; AI</p>
+              <p class="project-copy">
+                Production-ready modular RAG pipeline for querying custom documents with LLMs. Built for extensibility,
+                cleaner architecture, and scale.
+              </p>
               <a href="https://github.com/meghaboi/modular_rag_app_v2" target="_blank" rel="noreferrer"
-                >GitHub &rarr;</a
+                >Open Repo &rarr;</a
               >
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>CA MRR Website</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/ca-mrr-website</p>
-              <a href="https://github.com/meghaboi/ca-mrr-website" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">08</p>
+              <div class="project-head">
+                <h3>CA MRR Website</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">HTML &middot; JavaScript &middot; CSS</p>
+              <p class="project-copy">
+                Professional services website build focused on clean storytelling, structured service pages, and
+                conversion-oriented layout decisions.
+              </p>
+              <a href="https://github.com/meghaboi/ca-mrr-website" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>Anonymous Student Events App</h3>
-              <p class="project-tag">Private Repo</p>
-              <p class="project-copy">This repository is private right now. Public release is coming soon.</p>
+              <p class="project-index">09</p>
+              <div class="project-head">
+                <h3>Anonymous Student Events App</h3>
+                <span class="project-status">Private</span>
+              </div>
+              <p class="project-tag">Private repository</p>
+              <p class="project-copy">
+                Student events app is private right now. Public launch is planned once core features and moderation
+                tooling are finalized.
+              </p>
               <span class="project-link-disabled" aria-disabled="true">Coming soon</span>
             </article>
 
             <article class="project-card reveal-on-scroll">
-              <h3>Neta Navigator</h3>
-              <p class="project-tag">GitHub Project</p>
-              <p class="project-copy">Repository: meghaboi/neta-navigator</p>
-              <a href="https://github.com/meghaboi/neta-navigator" target="_blank" rel="noreferrer">GitHub &rarr;</a>
+              <p class="project-index">10</p>
+              <div class="project-head">
+                <h3>Neta Navigator</h3>
+                <span class="project-status">Live Repo</span>
+              </div>
+              <p class="project-tag">TypeScript &middot; React &middot; Gemini</p>
+              <p class="project-copy">
+                Civic accountability platform: "Know your Leaders. Demand Accountability." Lets users inspect Indian
+                politicians and compare public track records.
+              </p>
+              <a href="https://github.com/meghaboi/neta-navigator" target="_blank" rel="noreferrer">Open Repo &rarr;</a>
             </article>
           </div>
         </div>
